<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground"
    tools:context=".MainActivity" >

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtview_planificationTitre"
        android:textSize="25sp"
        android:textColor="@android:color/black" 
        android:layout_marginBottom="5dp" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="5dp"
       android:text="@string/spinner_HeureDeb"
       android:textColor="@android:color/black"
       android:textSize="15sp" />
      
   <Spinner
       android:id="@+id/spnr_planifHeureDebut"
       android:layout_width="90dp"
       android:layout_height="wrap_content" />

   <Spinner
       android:id="@+id/spnr_planifMinDebut"
       android:layout_width="90dp"
       android:layout_height="wrap_content" />
   
      <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="5dp"
       android:text="@string/spinner_HeureFin"
       android:textColor="@android:color/black"
       android:textSize="15sp" />
   
    <Spinner
       android:id="@+id/spnr_planifHeureFin"
       android:layout_width="90dp"
       android:layout_height="wrap_content" />

   <Spinner
       android:id="@+id/spnr_planifMinFin"
       android:layout_width="90dp"
       android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn_planifEnregistrer"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center"
        android:text="@string/bouton_planifEnregistrer"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
		android:typeface="monospace" />
    	
    <Button
        android:id="@+id/btn_plannifRetour"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center"
        android:text="@string/bouton_Retour"
        android:textColor="#FFFFFF"
        android:textSize="25sp" 
        android:typeface="monospace" />
</LinearLayout>