<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_demarrer"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center"
        android:text="@string/bouton_demarrer"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />
    	
    <Button
        android:id="@+id/btn_config"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center"
        android:text="@string/bouton_configuration"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_quitter"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center"
        android:text="@string/bouton_quitter"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/StopperCapture"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonsdesign"
        android:gravity="center_horizontal"
        android:text="@string/StopperCapture"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

</LinearLayout>